[package]
name = "eccodes-sys"
description = "Low-level Rust bindings for latests ecCodes version."
repository = "https://github.com/ScaleWeather/eccodes-sys"
version = "0.0.1"
readme = "README.md"
authors = ["Jakub Lewandowski <scaleweather@gmail.com>"]
keywords = ["eccodes", "grib", "bufr", "meteorology", "weather"]
categories = ["api-bindings", "external-ffi-bindings", "mathematics", "encoding", "science"]
license = "Apache-2.0"
edition = "2018"
links = "eccodes"

[features]
tests = []
nobuild = []
build_source = []
shared = ["build_source"]
no_memfs = ["build_source"]
jpeg = ["build_source"] #requires libopenjp2-7-dev
png = ["build_source"] #requires libpng-dev
netcdf = ["build_source"] #requires libnetcdff-dev libnetcdf-c++4-dev

[build-dependencies]
bindgen = "0.58.1"
pkg-config = "0.3.19"
cmake = "0.1.45"
flate2 = "1.0.20"
tar = "0.4.35"
