[package]
name = "eccodes-sys"
description = "Low-level Rust bindings for latests ecCodes version."
repository = "https://github.com/ScaleWeather/eccodes-sys"
version = "0.3.1"
readme = "README.md"
authors = ["Jakub Lewandowski <scaleweather@gmail.com>"]
keywords = ["eccodes", "grib", "bufr", "meteorology", "weather"]
categories = ["api-bindings", "external-ffi-bindings", "mathematics", "encoding", "science"]
license = "Apache-2.0"
edition = "2021"
links = "eccodes"
exclude = [
    ".github/*",
]

[features]
tests = []
docs = []

[build-dependencies]
bindgen = "^0.59.1"
pkg-config = "^0.3.22"

[package.metadata.docs.rs]
features = ["docs"]
default-target = "x86_64-unknown-linux-gnu"
